Fix buttons alignment

--- a/style.css
+++ b/style.css
@@ -36,13 +36,17 @@ iframe#screen {
     height: 469px;
 }
 
+section#buttons {
+    text-align: right;
+}
+
 section#buttons a {
     text-decoration: none;
 }
 
 section#buttons img {
     width: 50px;
-    margin: 10px 5px;
+    margin: 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
